--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -75,7 +75,7 @@
                                     <a href="">Home</a>
                                 </li>
                                 <li>
-                                    <a href="">About</a>
+                                    <a href="{% url 'web:about' %}">About</a>
                                 </li>
                                 <li class="menu_has_children">
                                     <a href="#0">Product <i class="las la-angle-down"></i></a>
@@ -103,16 +103,6 @@
     End Header
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
-
-
-
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Start Scroll-To-Top
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<a href="" class="scrollToTop"><i class="las la-angle-double-up"></i></a>
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    End Scroll-To-Top
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
 
 
