--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -72,7 +72,7 @@
                         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                             <ul class="navbar-nav main-menu">
                                 <li class="">
-                                    <a href="">Home</a>
+                                    <a href="{% url 'web:home' %}">Home</a>
                                 </li>
                                 <li>
                                     <a href="">About</a>
@@ -106,13 +106,8 @@
 
 
 
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Start Scroll-To-Top
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<a href="" class="scrollToTop"><i class="las la-angle-double-up"></i></a>
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    End Scroll-To-Top
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+
+
 
 
 
