--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -90,7 +90,7 @@
                                 <li class="">
                                     <a href="">Career</a>
                                 </li>
-                                <li><a href="">Contact</a></li>
+                                <li><a href="{% url 'web:contact' %}">Contact</a></li>
                             </ul>
                         </div>
                     </nav>
