--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -78,13 +78,14 @@
                                     <a href="{% url 'web:about' %}">About</a>
                                 </li>
                                 <li class="menu_has_children">
-                                    <a href="#0">Product <i class="las la-angle-down"></i></a>
-                                    <ul class="sub-menu">
+                                    <a href="{% url 'web:category' %}">category</a>
+                                    <!-- <ul class="sub-menu">
+                                        <li><a href="">Al</a></li>
                                         <li><a href="">product One</a></li>
                                         <li><a href="">product Two</a></li>
                                         <li><a href="">product Three</a></li>
                                         <li><a href="">product Four</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                 <li><a href="">Services</a></li>
                                 <li class="">
@@ -227,11 +228,11 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-12 text-center">
-                    <div class="copyright-area">
+                    <div class="copyright-area text-center">
                         <div class="footer-logo">
-                            <a class="site-logo site-title" href="index.html"><img src="{% static 'web/images/logo-two.png' %}" alt="site-logo"></a>
+                            <a class="site-logo site-title" href=""><img src="{% static 'web/images/logo-two.png' %}" alt="site-logo"></a>
                         </div>
-                        <p>Copyright © 2022 <a href="index.html">Softim</a>. All Rights Reserved. Designed by ThemeIM</p>
+                        <!-- <p>Copyright © 2022 <a href="index.html">Softim</a>. All Rights Reserved. Designed by ThemeIM</p> -->
                     </div>
                 </div>
             </div>
