--- a/templates/web/about.html
+++ b/templates/web/about.html
@@ -32,7 +32,7 @@
                         <div class="breadcrumb-area">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="">Home</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'web:home' %}">Home</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">About us</li>
                                 </ol>
                             </nav>
@@ -67,7 +67,7 @@
                     <p class="para">Softim is not only a globally recognized IT company but also a family filled with talented experts that help global brands, enterprises, mid-size businesses or even startups <br> with innovative solutions.</p>
                     <p>Softin is not an entity, it’s a family that represents togetherness for over two decades of a successful journey. For IndiaNICians, the definition of success is to transcend innovative ideas of people to reality with the help of our tech expertise, this is what we, as a Team, want to be remembered for!</p>
                     <div class="about-btn two">
-                        <a href="contact.html" class="btn--base">Contact us</a>
+                        <a href="{% url 'web:contact' %}" class="btn--base">Contact us</a>
                         <span>or Call <a href="tel:11026593268003">+110 2659 3268 003</a></span>
                     </div>
                 </div>
@@ -180,59 +180,6 @@
 </section>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     End Agency
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-
-
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Start have a project
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<section class="about-section">
-    <div class="about-element-one two">
-        <img src="{% static 'web/images/element/element-39.png' %}" alt="element">
-    </div>
-    <div class="container">
-        <div class="about-area two">
-            <div class="row justify-content-center align-items-center mb-30-none">
-                <div class="col-xl-6 col-lg-6 mb-30">
-                    <div class="box-wrapper two">
-                        <div class="box3"></div>
-                        <div class="box1">
-                            <div class="box-element-one">
-                                <img src="{% static 'web/images/element/element-59.png' %}" alt="element">
-                            </div>
-                            <div class="box-element-two">
-                                <img src="{% static 'web/images/element/element-7.png' %}" alt="element">
-                            </div>
-                        </div>
-                        <div class="box2">
-                            <div class="box-element-five">
-                                <img src="{% static 'web/images/element/element-16.png' %}" alt="element">
-                            </div>
-                            <div class="box-element-six">
-                                <img src="{% static 'web/images/element/element-7.png' %}" alt="element">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="about-thumb">
-                        <img src="{% static 'web/images/element/element-58.png' %}" alt="element">
-                    </div>
-                </div>
-                <div class="col-xl-6 col-lg-6 mb-30">
-                    <div class="about-content">
-                        <h2 class="title">Have a project in mind? <span class="text--base">Let's connect</span></h2>
-                        <p class="para">We rank among the best in the US, Argentina, and Ukraine. Our apps get featured as best in class, & our clients love our work.</p>
-                        <p>Welcome To Softim, a software development company, helps to digitize businesses by focusing on client’s business challenges, needs, pain points and providing business-goals-oriented software solutions.</p>
-                        <div class="about-btn">
-                            <a href="" class="btn--base">Send Message</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    End have a project
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
 
