--- a/templates/web/category-product.html
+++ b/templates/web/category-product.html
@@ -32,7 +32,7 @@
                         <div class="breadcrumb-area">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'web:home' %}">Home</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Category</li>
                                 </ol>
                             </nav>
@@ -78,13 +78,13 @@
                                             <a href=""><i class="fas fa-shopping-cart"></i></a>
                                         </div>
                                         <div class="gallery-icon">
-                                            <a href=""><i class="fas fa-bars"></i></a>
+                                            <a href="{% url 'web:productdetails' %}"><i class="fas fa-bars"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="gallery-content">
                                     <h4 class="title"><a href="{% url 'web:productdetails' %}">Modern Technology</a></h4>
-                                    <span class="price">$225.00</span>
+                                    <!-- <span class="price">$225.00</span> -->
                                 </div>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                                 </div>
                                 <div class="gallery-content">
                                     <h4 class="title"><a href="">Software Solutions</a></h4>
-                                    <span class="price">$375.00</span>
+                                    <!-- <span class="price">$375.00</span> -->
                                 </div>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                                 </div>
                                 <div class="gallery-content">
                                     <h4 class="title"><a href="">Ecommerce Solutions</a></h4>
-                                    <span class="price">$450.00</span>
+                                    <!-- <span class="price">$450.00</span> -->
                                 </div>
                             </div>
                         </div>
@@ -141,7 +141,7 @@
                                 </div>
                                 <div class="gallery-content">
                                     <h4 class="title"><a href="">Modern Technology</a></h4>
-                                    <span class="price">$332.00</span>
+                                    <!-- <span class="price">$332.00</span> -->
                                 </div>
                             </div>
                         </div>
@@ -160,7 +160,7 @@
                                 </div>
                                 <div class="gallery-content">
                                     <h4 class="title"><a href="">Software Solutions</a></h4>
-                                    <span class="price">$430.00</span>
+                                    <!-- /<span class="price">$430.00</span> -->
                                 </div>
                             </div>
                         </div>
@@ -179,7 +179,7 @@
                                 </div>
                                 <div class="gallery-content">
                                     <h4 class="title"><a href="">Ecommerce Solutions</a></h4>
-                                    <span class="price">$250.00</span>
+                                    <!-- <span class="price">$250.00</span> -->
                                 </div>
                             </div>
                         </div>
@@ -198,7 +198,7 @@
                                 </div>
                                 <div class="gallery-content">
                                     <h4 class="title"><a href="">Modern Technology</a></h4>
-                                    <span class="price">$652.00</span>
+                                    <!-- <span class="price">$652.00</span> -->
                                 </div>
                             </div>
                         </div>
@@ -217,7 +217,7 @@
                                 </div>
                                 <div class="gallery-content">
                                     <h4 class="title"><a href="">Corporate Solutions</a></h4>
-                                    <span class="price">$380.00</span>
+                                    <!-- <span class="price">$380.00</span> -->
                                 </div>
                             </div>
                         </div>
