--- a/templates/web/category.html
+++ b/templates/web/category.html
@@ -32,7 +32,7 @@
                         <div class="breadcrumb-area">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="">Home</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'web:home' %}">Home</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Categories</li>
                                 </ol>
                             </nav>
