added career ,details, apply

--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -33,7 +33,7 @@
                         <div class="breadcrumb-area">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                    <li class="breadcrumb-item"><a href="{% url 'web:home' %}">Home</a></li>
                                     <li class="breadcrumb-item active" aria-current="page">Contact us</li>
                                 </ol>
                             </nav>
