added service and service detils

--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -87,8 +87,8 @@
                                         <li><a href="">product Four</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="">Services</a></li>
-                                <li class="">
+                                <li><a href="{% url 'web:service' %}">Services</a></li>
+                                <li>
                                     <a href="{% url 'web:career' %}">Career</a>
                                 </li>
                                 <li><a href="{% url 'web:contact' %}">Contact</a></li>
