--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -15,7 +15,7 @@
     <!-- bootstrap css link -->
     <link rel="stylesheet" href="{% static 'web/css/bootstrap.min.css' %}">
     <!-- favicon -->
-    <link rel="shortcut icon" href="{% static 'web/images/fav.png' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'web/logo.png' %}" type="image/x-icon">
     <!-- swipper css link -->
     <link rel="stylesheet" href="{% static 'web/css/swiper.min.css' %}">
     <!-- lightcase css links -->
@@ -83,13 +83,6 @@
                                 </li>
                                 <li class="menu_has_children">
                                     <a href="{% url 'web:category' %}">category</a>
-                                    <!-- <ul class="sub-menu">
-                                        <li><a href="">Al</a></li>
-                                        <li><a href="">product One</a></li>
-                                        <li><a href="">product Two</a></li>
-                                        <li><a href="">product Three</a></li>
-                                        <li><a href="">product Four</a></li>
-                                    </ul> -->
                                 </li>
                                 <li><a href="{% url 'web:service' %}">Services</a></li>
                                 <li>
