--- a/templates/web/category-product.html
+++ b/templates/web/category-product.html
@@ -33,7 +33,8 @@
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{% url 'web:home' %}">Home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Category</li>
+                                <li class="breadcrumb-item"><a href="{% url 'web:category' %}">Category</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Product</li>
                                 </ol>
                             </nav>
                         </div>
