--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -35,6 +35,8 @@
     <!-- main style css link -->
     <link rel="stylesheet" href="{% static 'web/css/style.css' %}">
 
+
+ 
 </head>
 <body>
 
@@ -71,8 +73,8 @@
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="toggle-bar"></span>
                         </button>
-                        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                            <ul class="navbar-nav main-menu">
+                        <div class="collapse navbar-collapse justify-content-end " id="navbarSupportedContent">
+                            <ul class="navbar-nav main-menu ">
                                 <li class="">
                                     <a href="{% url 'web:home' %}">Home</a>
                                 </li>
@@ -193,25 +195,22 @@
                         <div class="footer-widget">
                             <h4 class="title">Explore Softim</h4>
                             <ul class="footer-list">
-                                <li><a href="#0">Account</a></li>
-                                <li><a href="#0">Privacy Policy</a></li>
-                                <li><a href="#0">Affilitate</a></li>
-                                <li><a href="#0">Program</a></li>
-                                <li><a href="#0">Our Partner</a></li>
+                                <li class="">
+                                    <a href="{% url 'web:home' %}">Home</a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'web:about' %}">About</a>
+                                </li>
+                               
+                                <li>
+                                    <a href="{% url 'web:career' %}">Career</a>
+                                </li>
+                                <li><a href="{% url 'web:contact' %}">Contact</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-2 col-md-6 mb-30">
-                        <div class="footer-widget">
-                            <h5 class="title">Quick Links</h5>
-                            <ul class="footer-list">
-                                <li><a href="#0">Account</a></li>
-                                <li><a href="#0">Privacy Policy</a></li>
-                                <li><a href="#0">Affilitate</a></li>
-                                <li><a href="#0">Program</a></li>
-                                <li><a href="#0">Our Partner</a></li>
-                            </ul>
-                        </div>
+                       
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
                         <div class="footer-widget">
@@ -228,11 +227,11 @@
     </div>
     <div class="copyright-wrapper two">
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-xl-12 text-center">
-                    <div class="copyright-area text-center">
-                        <div class="footer-logo">
-                            <a class="site-logo site-title" href=""><img src="{% static 'web/images/logo-two.png' %}" alt="site-logo"></a>
+            <div class="row justify-content-center  ">
+                <div class="col-xl-12    ">
+                    <div class="copyright-area ">
+                        <div class="footer-logo mx-auto">
+                            <a class="site-logo site-title" href="{% url 'web:home' %}"><img src="{% static 'web/images/logo-two.png' %}" alt="site-logo"></a>
                         </div>
                         <!-- <p>Copyright © 2022 <a href="index.html">Softim</a>. All Rights Reserved. Designed by ThemeIM</p> -->
                     </div>
