--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -68,7 +68,7 @@
             <div class="container custom-container">
                 <div class="header-menu-content">
                     <nav class="navbar navbar-expand-xl p-0">
-                        <a class="site-logo site-title" href=""><img src="{% static 'web/images/logo-three.png' %}" alt="site-logo"></a>
+                        <a class="site-logo site-title" href=""><img src="{% static 'web/logo.png' %}" style="width: 80px; height: 80px;" alt="site-logo"></a>
                         <button class="navbar-toggler d-block d-xl-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="toggle-bar"></span>
@@ -186,7 +186,7 @@
                             <ul class="footer-social">
                                 <li><a href="#0"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#0"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#0"><i class="fab fa-google-plus-g"></i></a></li>
+                                <li><a href="#0"><i class="fab fa-linkedin-in"></i></a></li>
                                 <li><a href="#0"><i class="fab fa-instagram"></i></a></li>
                             </ul>
                         </div>
@@ -233,7 +233,7 @@
                         <div class="footer-logo mx-auto">
                             <a class="site-logo site-title" href="{% url 'web:home' %}"><img src="{% static 'web/images/logo-two.png' %}" alt="site-logo"></a>
                         </div>
-                        <!-- <p>Copyright © 2022 <a href="index.html">Softim</a>. All Rights Reserved. Designed by ThemeIM</p> -->
+                       <p>© Copyright 2019 Onflap - All Rights Reserved</p>
                     </div>
                 </div>
             </div>
